--- a/1/EomTool/EomToolWeb/packages.config
+++ b/1/EomTool/EomToolWeb/packages.config
@@ -2,11 +2,10 @@
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="jQuery" version="1.7.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
-  <package id="KendoGridBinderEx" version="5.0.0.9" targetFramework="net45" />
+  <package id="KendoGridBinder" version="2.0.0" targetFramework="net461" />
   <package id="KendoUIWeb" version="2012.2.710" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net452" />
@@ -25,8 +24,8 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
   <package id="Ninject.Extensions.Interception" version="3.3.0" targetFramework="net452" />
-  <package id="System.Linq.Dynamic.Library" version="1.1.14" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="System.Linq.Dynamic.Core" version="1.0.8.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="TinyMCE" version="3.4.7" targetFramework="net40" />
   <package id="TinyMCE.jQuery" version="3.4.7" targetFramework="net40" />
   <package id="TinyMCE.MVC.JQuery" version="3.4.7" targetFramework="net40" />
