--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -551,6 +551,10 @@
     <Compile Include="MigrationsTD\201810251246382_Mig_SummaryMetricsKey.Designer.cs">
       <DependentUpon>201810251246382_Mig_SummaryMetricsKey.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201811010816073_Mig_KeywordExternalId.cs" />
+    <Compile Include="MigrationsTD\201811010816073_Mig_KeywordExternalId.Designer.cs">
+      <DependentUpon>201811010816073_Mig_KeywordExternalId.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -910,6 +914,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201810251246382_Mig_SummaryMetricsKey.resx">
       <DependentUpon>201810251246382_Mig_SummaryMetricsKey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201811010816073_Mig_KeywordExternalId.resx">
+      <DependentUpon>201811010816073_Mig_KeywordExternalId.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
