--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -1202,6 +1202,7 @@
     <Content Include="Areas\ProgAdmin\Views\ExtAccounts\IndexSpecialPlatformStats.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Facebook\Totals.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Facebook\Latests.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Shared\DatePicker.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
